# slop-trove

./: .gitignore  README.md  flake.nix  nixos-module.nix  package.nix  pyproject.toml
src/slop_trove/: __init__.py  cli.py  config.py  db.py  embed.py  mcp_server.py  models.py
src/slop_trove/ingest/: __init__.py  claude.py  discord.py
