[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slop-trove"
version = "0.0.1"
description = "Personal data embedding + semantic search platform"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "httpx>=0.27",
    "mcp>=1.2",
]

[project.scripts]
slop-trove = "slop_trove.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
